--- a/src/app/allsongs/allsongs.component.html
+++ b/src/app/allsongs/allsongs.component.html
@@ -8,36 +8,47 @@
         Add Song</a>
     </div> -->
 
-    <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<form class="form1" (submit)="addList()">
+  <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header text-center">
-        <h4 class="modal-title w-100 font-weight-bold">Sign in</h4>
+        <h4 class="modal-title w-100 font-weight-bold">Add Songs</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body mx-3">
-        <div class="md-form mb-5">
-          <i class="fas fa-envelope prefix grey-text"></i>
-          <input type="email" id="defaultForm-email" class="form-control validate">
-          <label data-error="wrong" data-success="right" for="defaultForm-email">Your email</label>
+      <div class="modal-body mx-2">
+        <div class="md-form mb-3">
+          <!-- <i class="fas fa-envelope prefix grey-text"></i> -->
+          <input type="text" id="defaultForm-email" class="form-control validate" placeholder="Title" name="title" [(ngModel)]="Songname1">
+          <!-- <label data-error="wrong" data-success="right" for="defaultForm-email"></label> -->
         </div>
-
-        <div class="md-form mb-4">
-          <i class="fas fa-lock prefix grey-text"></i>
-          <input type="password" id="defaultForm-pass" class="form-control validate">
-          <label data-error="wrong" data-success="right" for="defaultForm-pass">Your password</label>
+        <div class="md-form mb-3">
+          <!-- <i class="fas fa-envelope prefix grey-text"></i> -->
+          <input type="text" id="defaultForm-email" class="form-control validate" placeholder="Artist" name="artist" [(ngModel)]="Artist1">
+          <!-- <label data-error="wrong" data-success="right" for="defaultForm-email"></label> -->
+        </div>
+        <div class="md-form mb-3">
+          <!-- <i class="fas fa-envelope prefix grey-text"></i> -->
+          <input type="text" id="defaultForm-email" class="form-control validate" placeholder="Album" name="album" [(ngModel)]="genre1">
+          <!-- <label data-error="wrong" data-success="right" for="defaultForm-email"></label> -->
+        </div>
+        <div class="md-form mb-3">
+          <!-- <i class="fas fa-envelope prefix grey-text"></i> -->
+          <input type="text" id="defaultForm-email" class="form-control validate" placeholder="Duration" name="dur" [(ngModel)]="dur1">
+          <!-- <label data-error="wrong" data-success="right" for="defaultForm-email">Duration</label> -->
         </div>
 
       </div>
       <div class="modal-footer d-flex justify-content-center">
-        <button class="btn btn-default">Login</button>
+        <button class="btn btn-default">Submit</button>
       </div>
     </div>
   </div>
 </div>
+</form>
 
 <div class="text-center">
   <a href="/form" class="btn btn-default btn-rounded mb-4" data-toggle="modal" data-target="#modalLoginForm">Add Song</a>
@@ -52,6 +63,7 @@
           <th>Artist</th>
           <th>Album</th>
           <th>Duration</th>
+          <th>Favourite</th>
         </tr>
       </thead>
       <tbody *ngFor="let data of datas">
@@ -61,6 +73,7 @@
           <td>{{data.Artist}}</td>
           <td>{{data.genre}}</td>
           <td>{{data.dur}}</td>
+          <td><i class="fa-solid fa-heart"></i></td>
         </tr>
       </tbody>
     </table>
