--- a/src/app/genre/genre.component.html
+++ b/src/app/genre/genre.component.html
@@ -1,1 +1,34 @@
-<p>genre works!</p>
+<div style="border: 5px solid #05445E; border: radius 10px;background-color:#a8d2fa;text-align: center;" id="header">
+    <h1 style="font-size:3.2rem;letter-spacing:0.8;color:black;font-weight: 900;font-family: 'Bebas Neue', cursive">EXPLORE</h1>
+</div>
+<div class="container">
+    <form>
+        <select class="form-select form-select-lg mb-3" aria-label=".form-select-md example">
+            <option selected>Open this select menu</option>
+            <option value="Rock">Rock</option>
+            <option value="Classic">Classic</option>
+            <option value="Melody">Melody</option>
+          </select>
+          <button type="submit" class="btn btn-outline-success">Check</button>
+    </form>
+    <div class="table-responsive">          
+    <table class="table">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Title</th>
+          <th>Artist</th>
+          <th>Duration</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Anna</td>
+          <td>Lil Nas X</td>
+          <td>35</td>
+        </tr>
+      </tbody>
+    </table>
+    </div>
+  </div>
