--- a/src/app/fav/fav.component.html
+++ b/src/app/fav/fav.component.html
@@ -14,13 +14,13 @@
           <th>Duration</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody *ngFor="let data of list">
         <tr>
-          <td>1</td>
-          <td>Anna</td>
-          <td>Lil Nas X</td>
-          <td>Pitt</td>
-          <td>35</td>
+          <td>{{data.id}}</td>
+          <td>{{data.Songname}}</td>
+          <td>{{data.Artist}}</td>
+          <td>{{data.genre}}</td>
+          <td>{{data.dur}}</td>
         </tr>
       </tbody>
     </table>
