--- a/src/app/allsongs/allsongs.component.html
+++ b/src/app/allsongs/allsongs.component.html
@@ -75,7 +75,8 @@
           <td>{{data.genre}}</td>
           <td>{{data.dur}}</td>
           <td><button type="submit" (click)="addFav(data.id)"><i [ngStyle]="{'color':stylecolor=='abc'?'red':'blue'}" class="far fa-heart">{{data.fav}}</i></button></td>
-          <td><button type="submit" (click)="delete(data.id)" class="delete">X</button></td>
+          <!-- <td><button type="submit" (click)="delete(data.id)" class="delete">X</button></td> -->
+          <td><span (click)="deleteSong(data.id)">Delete</span></td>
         </tr>
       </tbody>
     </table>
