--- a/src/app/allsongs/allsongs.component.html
+++ b/src/app/allsongs/allsongs.component.html
@@ -69,7 +69,7 @@
       </thead>
       <tbody >
         <tr *ngFor="let data of datas">
-          <td><a href="/song"><i class="fa-regular fa-circle-play"></i></a>{{data.id}}</td>
+          <td><span><a href="/song"><i class="fa-regular fa-circle-play"></i></a></span>{{data.id}}</td>
           <td>{{data.Songname}}</td>
           <td>{{data.Artist}}</td>
           <td>{{data.genre}}</td>
