--- a/src/app/allsongs/allsongs.component.css
+++ b/src/app/allsongs/allsongs.component.css
@@ -9,4 +9,12 @@
     height: 600px;
   }
 
-  
+  button, input[type="submit"], input[type="reset"] {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+  }
