--- a/src/app/song/song.component.html
+++ b/src/app/song/song.component.html
@@ -1,11 +1,11 @@
 <div class="center">
     <div class="box">
         <img src="assets/images/song.png">
-        <div class="container">
-            <h2>SONG:</h2><span>Old town Road</span>
-            <h2>ARTIST:</h2><span>Old town Road</span>
-            <h2>GENRE:</h2><span>Old town Road</span>
-            <h2>DURATION:</h2><span>Old town Road</span>
+        <div class="container" *ngFor="let data of songs">
+            <h2>SONG:</h2><span>{{data.Songname}}</span>
+            <h2>ARTIST:</h2><span>{{data.Artist}}</span>
+            <h2>GENRE:</h2><span>{{data.Songname}}</span>
+            <h2>DURATION:</h2><span>{{data.dur}}</span>
         </div>
     </div>    
 
