--- a/src/app/allsongs/allsongs.component.html
+++ b/src/app/allsongs/allsongs.component.html
@@ -32,7 +32,7 @@
         </div>
         <div class="md-form mb-3">
           <!-- <i class="fas fa-envelope prefix grey-text"></i> -->
-          <input type="text" id="defaultForm-email" class="form-control validate" placeholder="Album" name="album" formControlName="genre">
+          <input type="text" id="defaultForm-email" class="form-control validate" placeholder="Genre" name="Genre" formControlName="genre">
           <!-- <label data-error="wrong" data-success="right" for="defaultForm-email"></label> -->
         </div>
         <div class="md-form mb-3">
@@ -61,7 +61,7 @@
           <th>#</th>
           <th>Title</th>
           <th>Artist</th>
-          <th>Album</th>
+          <th>Genre</th>
           <th>Duration</th>
           <th>Favourite</th>
           <th></th>
