--- a/src/app/fav/fav.component.html
+++ b/src/app/fav/fav.component.html
@@ -17,8 +17,8 @@
       <tbody *ngFor="let data of list">
         <tr>
           <td>{{data.id}}</td>
-          <td>{{data.Songname}}</td>
-          <td>{{data.Artist}}</td>
+          <td>{{data.songname}}</td>
+          <td>{{data.artist}}</td>
           <td>{{data.genre}}</td>
           <td>{{data.dur}}</td>
         </tr>
