--- a/src/app/allsongs/allsongs.component.html
+++ b/src/app/allsongs/allsongs.component.html
@@ -54,7 +54,7 @@
   <a href="/form" class="btn btn-default btn-rounded mb-4" data-toggle="modal" data-target="#modalLoginForm">Add Song</a>
 </div>
 
-    <div class="table-responsive">          
+    <div class="table-responsive" id="horizontal-scroll">          
     <table class="table">
       <thead>
         <tr>
