--- a/src/app/fav/fav.component.html
+++ b/src/app/fav/fav.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="container">
     <!-- <h2>Table</h2> -->
-    <div class="table-responsive">          
+    <div class="table-responsive" id="horizontal-scroll">          
     <table class="table">
       <thead>
         <tr>
