--- a/src/app/genre/genre.component.html
+++ b/src/app/genre/genre.component.html
@@ -10,7 +10,7 @@
           </select>
           <button type="submit" class="btn btn-outline-success">Check</button>
     </form>
-    <div class="table-responsive">          
+    <div class="table-responsive" id="horizontal-scroll">          
     <table class="table">
       <thead>
         <tr>
