--- a/src/app/fav/fav.component.css
+++ b/src/app/fav/fav.component.css
@@ -7,3 +7,12 @@
     height:75px;
 }
 tr:nth-child(even) {background-color: #f2f2f2;}
+#horizontal-scroll {
+  overflow: hidden;
+  overflow-x: auto;
+  clear: both;
+  width: 100%;
+}
+.table{
+  min-width: rem-calc(640);
+}
